tests/NormalTests/paczka1/fuzzy1/23955556.err
Error in line 13: pubicl8r A387 9,1
Error in line 26: pubicl8r A977 99,4
Error in line 28: IPiOuWor A387 94,3
Error in line 30: IPiOuWor A191 77,1
Error in line 21: tgpWbhsdoQJ A977 24,1
Error in line 37: AW87 SW18 W6,4
